# Elite_Robots_CS_SDK_C

./: CMakeLists.txt  ChangeLog.cn.md  ChangeLog.md  README.md  README_CN.md
doc/API/API/cn/: API.cn.md  CommonTypes.cn.md  ControllerLog.cn.md  Dashboard.cn.md  EliteDriver.cn.md  EliteDriverConfig.cn.md  Log.cn.md  Primary.cn.md  RemoteUpgrade.cn.md  Rtsi.cn.md  SerialCommunication.cn.md  VersionInfo.cn.md
doc/API/API/en/: API.md  CommonTypes.md  ControllerLog.md  Dashboard.md  EliteDriver.md  EliteDriverConfig.md  Log.md  Primary.md  RemoteUpgrade.md  Rtsi.md  SerialCommunication.md  VersionInfo.md
doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.md
examples/: CMakeLists.txt  dashboard_example.c  example_portability.h  primary_example.c  rtsi_example.c  servoj_plan_example.c  speedl_example.c  trajectory_example.c  usage_example.en.md  usage_example.md
include/Elite/: EliteDriver_C.h  SerialCommunication_C.hpp
source/Elite/: EliteDriver_C.cpp
source/Primary/: PrimaryPortInterface_C.cpp
